# Flowmium

./: .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  apidoc.http
.github/workflows/: check.yml
console/: .prettierrc  package-lock.json  package.json  svelte.config.js  tailwind.config.js
console/src/: app.css  app.html
console/src/lib/components/: Button.svelte  Card.svelte  Dots.svelte  Entry.svelte
console/src/lib/components/app/: Logo.svelte  LogoAndName.svelte
console/src/lib/components/toast/: Error.svelte  Success.svelte
console/src/lib/components/userForm/: LoginUserForm.svelte  UserForm.svelte
console/src/routes/: +page.svelte  utils.ts
examples/deployment/: .gitignore  README.md  docker-compose.yaml  kubernetes.yaml  test-registries.yaml
examples/python_package_workflow/: .gitignore  Dockerfile  README.md  docker-compose.yaml  kubeconfig.yaml  test-services.yaml
examples/python_script_workflow/: .gitignore  README.md  my_flow.py
examples/yaml_flow_definition/: README.md  my_flow.yaml
flowmium/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  apidoc.http  foo.rs  foo.txt  test-dockerfile  test-services.yaml  test.yml
flowmium/.github/: check.yml
flowmium/.github/workflows/: check.yml
flowmium/apidoc/: job.http
flowmium/migrations/: 20230404165514_init.sql  20230609170721_secrets.sql
flowmium/src/: api.rs  args.rs  artefacts.rs  driver.rs  flow.rs  job.rs  lib.rs  main.rs  pool.rs  retry.rs  secrets.rs
flowmium/src/artefacts/: bucket.rs  errors.rs  init.rs  mod.rs  sidecar.rs  task.rs
flowmium/src/client/: args.rs  driver.rs  mod.rs  pretty.rs  requests.rs
flowmium/src/flow/: driver.rs  errors.rs  executor.rs  graph.rs  mod.rs  model.rs  planner.rs  record.rs  runner.rs  scheduler.rs  sidecar.rs
flowmium/src/server/: api.rs  args.rs  driver.rs  event.rs  executor.rs  mod.rs  model.rs  planner.rs  pool.rs  record.rs  scheduler.rs  secrets.rs
flowmium/src/task/: bucket.rs  driver.rs  errors.rs  mod.rs
framework/: .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py
framework/docs/: conf.py  index.rst
framework/flowmium/: __init__.py  _flow.py  default_serialize.py  flow.py  serializers.py
framework/tests/: __main__.py  test_flow.py
src/: job.rs
