[package]
name = "flowmium"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "CLI tool to validate and format json files"
homepage = "https://github.com/RainingComputers/Flowmium"
repository = "https://github.com/RainingComputers/Flowmium"
documentation = "https://github.com/RainingComputers/Flowmium"
readme = "../README.md"
authors = ["RainingComputers <vishnu.vish.shankar@gmail.com>"]
keywords = ["kubernetes"]
categories = ["algorithms"]
include = [
    "**/*.rs",
    "Cargo.toml",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.8.26"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = {  version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "json"] }
rust-s3 = "0.32.3"
serde_json = "1.0.93"
envy = "0.4.2"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.40"
actix-web = "4"
argh = "0.1.10"
actix-web-actors = "4.2.0"
actix = "0.13.0"
tokio-stream = { version = "0.1.14", features = ["sync"]}
bytestring = "1.3.0"


[dev-dependencies]
serial_test = "*"
