[package]
name = "flowmium"
version = "0.0.9"
edition = "2021"
license = "MIT"
description = "Flowmium is a workflow orchestrator that use Kubernetes"
homepage = "https://github.com/RainingComputers/Flowmium"
repository = "https://github.com/RainingComputers/Flowmium"
documentation = "https://github.com/RainingComputers/Flowmium"
readme = "../README.md"
authors = ["RainingComputers <vishnu.vish.shankar@gmail.com>"]
keywords = ["kubernetes"]
categories = ["algorithms"]
include = ["**/*.rs", "migrations/*.sql", "Cargo.toml"]

[lib]
name = "flowmium"
path = "src/lib.rs"

[[bin]]
name = "flowctl"
path = "src/bin/flowctl.rs"

[[bin]]
name = "flowmium"
path = "src/bin/flowmium.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "migrate",
    "json",
] }
rust-s3 = "0.35.1"
serde_json = "1.0.134"
envy = "0.4.2"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "2.0.9"
actix-web = "4"
argh = "0.1.13"
actix-web-actors = "4.3.1"
actix = "0.13.5"
tokio-stream = { version = "0.1.17", features = ["sync"] }
bytestring = "1.4.0"
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
getset = "0.1.3"


[dev-dependencies]
serial_test = "3.2.0"
