[tool.poetry]
name = "flowmium"
version = "0.1.0"
description = ""
authors = ["RainingComputers <vishnu.vish.shankar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
